# GlassBoxAI-CNN

./: README.md  cnn.cpp  cnn.cu  cnn_cpp_tests.sh  cnn_cuda_tests.sh  cnn_opencl.cpp  cnn_opencl_tests.sh  facaded_cnn.cpp  facaded_cnn.cu  facaded_cnn_opencl.cpp
facaded_rust_cuda/: Cargo.toml  KANI_TESTS.md
facaded_rust_cuda/gui/: Cargo.toml  build.rs  errors.txt
facaded_rust_cuda/gui/.cargo/: config.toml
facaded_rust_cuda/gui/qml/: main.qml
facaded_rust_cuda/gui/src/: cnn.rs  cxx_qt_bridge.rs  kani_tests.rs  main.rs
facaded_rust_cuda/src/: kani_tests.rs  main.rs
rust_cuda/: Cargo.toml
rust_cuda/src/: cli.rs  main.rs
rust_cuda/src/cnn/: kernels.rs  layers.rs  mod.rs  network.rs  types.rs
