[package]
name = "facaded_cnn_cuda"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Abbott"]
license = "MIT"
description = "Convolutional Neural Network implementation using cudarc"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[dependencies]
cudarc = { version = "0.12", features = ["cuda-12060"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
# Kani is invoked via `cargo kani`, not as a regular dependency
# See: https://model-checking.github.io/kani/install-guide.html

# For running Kani proofs:
# cargo install --locked kani-verifier
# cargo kani
