[package]
name = "cnn_cuda"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Matthew Abbott"]
description = "GlassBoxAI CNN - CUDA implementation using cudarc"

[dependencies]
cudarc = { version = "0.12", features = ["cuda-version-from-build-system"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
